--- a/src/panels/Main/Main.scss
+++ b/src/panels/Main/Main.scss
@@ -7,6 +7,8 @@
     width: 100%;
     height: 100%;
 
+    margin-top: var(--safe-area-inset-top);
+
     position: fixed;
     top: 0;
     left: 0;
