--- a/src/pages/App.scss
+++ b/src/pages/App.scss
@@ -15,33 +15,8 @@ body::-webkit-scrollbar {
   }
 }
 
-// Скелетон
-.react-skeleton-load {
-  background-color: #e6e9f0 !important;
-}
-
-.Placeholder {
-  background: transparent !important;
-}
-
-.ScreenSpinner {
-  .PopoutWrapper__mask {
-    background: rgba(0, 0, 0, 0.4) !important;
-  }
-}
-
-.ScreenIcon {
-  width: 88px;
-  height: 88px;
-  background: #f9f9f9;
-  background: var(--tabbar_background);
-  color: var(--dynamic_green);
-  box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.08), 0 0 8px 0 rgba(0, 0, 0, 0.08);
-  border-radius: 8px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.Button {
+  cursor: pointer !important;
 }
 
 body[scheme="space_gray"] {
