--- a/src/panels/Ranking/Ranking.scss
+++ b/src/panels/Ranking/Ranking.scss
@@ -7,7 +7,7 @@
   }
 
   .ranking-swiper {
-    height: 100%;
+    height: calc(100% - (61px + var(--safe-area-inset-top)));
 
     .user-wrapper {
       display: flex;
@@ -20,6 +20,10 @@
         font-weight: bold;
 
         color: var(--header_tint);
+      }
+
+      .SimpleCell {
+        width: 100%;
       }
     }
   }
