--- a/src/panels/Game/Game.scss
+++ b/src/panels/Game/Game.scss
@@ -179,6 +179,9 @@
         display: flex;
 
         .logo {
+          width: 109px;
+          height: 140px;
+
           position: absolute;
           top: calc(50% - 70px);
           left: calc(50% - 55px);
