--- a/src/panels/Main/Main.scss
+++ b/src/panels/Main/Main.scss
@@ -7,14 +7,23 @@
     width: 100%;
     height: 100%;
 
-    margin-top: var(--safe-area-inset-top);
-
     position: fixed;
     top: 0;
     left: 0;
 
-    object-fit: cover;
-    filter: brightness(50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background: linear-gradient(180deg, #2E3F53 0%, #142132 100%);
+
+    .logo {
+      min-width: 500px;
+
+      path {
+        fill: #2E3F53;
+      }
+    }
   }
 
   .content {
@@ -26,34 +35,83 @@
     top: 0;
     left: 0;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    .pattern-with-logo {
+      width: 300px;
+      height: 300px;
 
-    z-index: 2;
+      position: absolute;
+      top: var(--safe-area-inset-top);
+      left: calc(50% - 150px);
 
-    color: #ffffff;
-    text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.7);
+      z-index: -1;
 
-    .title, .stat {
-      margin: 8px 16px;
+      .logo {
+        width: 150px;
+        height: 160px;
+
+        position: absolute;
+        top: calc(50% - 80px);
+        left: calc(50% - 75px);
+      }
     }
 
-    .buttons {
-      margin: 0 16px;
+    .buttons-with-stat {
+      width: 100%;
 
-      //padding-bottom: 50px;
-      margin-bottom: var(--safe-area-inset-bottom);
+      position: absolute;
+      bottom: calc(var(--safe-area-inset-bottom) + 20px);
 
-      display: flex;
-      flex-direction: column;
+      color: #ffffff;
 
-      .Button {
-        margin-bottom: 10px;
+      .header-title {
+        margin: 12px;
       }
 
-      .Button--lvl-overlay_secondary {
-        background-color: #4F4F4F !important;
+      .stat {
+        margin: 48px 0;
+
+        display: flex;
+        justify-content: center;
+
+        .item {
+          margin: 0 20px;
+
+          .stat-num {
+            font-size: 46px;
+            line-height: 46px;
+          }
+        }
+      }
+
+      .buttons {
+        margin: 0 12px;
+
+        display: flex;
+        flex-direction: column;
+
+        .Button {
+          margin: 6px 0;
+        }
+
+        .buttons-group {
+          .Button {
+            width: 50%;
+
+            &:first-child {
+              margin-right: 6px;
+            }
+
+            &:last-child {
+              margin-left: 6px;
+            }
+          }
+        }
+      }
+
+      .Banner {
+        margin-top: 6px;
+
+        padding: 0 12px;
       }
     }
   }
@@ -63,6 +121,35 @@ body[scheme="space_gray"] {
   #main {
     .bg-svg {
       fill: #2b2b2b;
+    }
+  }
+}
+
+@media screen and (max-height: 660px) {
+  #main {
+    .content {
+      .pattern-with-logo {
+        width: 220px;
+        height: 220px;
+
+        position: absolute;
+        top: var(--safe-area-inset-top);
+        left: calc(50% - 110px);
+
+        .logo {
+          width: 140px;
+          height: 150px;
+
+          top: calc(50% - 75px);
+          left: calc(50% - 70px);
+        }
+      }
+
+      .buttons-with-stat {
+        .stat {
+          margin: 28px 0;
+        }
+      }
     }
   }
 }
