--- a/src/panels/Main/Main.scss
+++ b/src/panels/Main/Main.scss
@@ -35,56 +35,64 @@
     top: 0;
     left: 0;
 
-    .pattern-with-logo {
-      width: 300px;
-      height: 300px;
-
-      position: absolute;
-      top: var(--safe-area-inset-top);
-      left: calc(50% - 150px);
-
-      z-index: -1;
-
-      .logo {
-        width: 150px;
-        height: 160px;
-
-        position: absolute;
-        top: calc(50% - 80px);
-        left: calc(50% - 75px);
-      }
-    }
-
     .buttons-with-stat {
       width: 100%;
+      height: 100%;
 
       position: absolute;
       bottom: calc(var(--safe-area-inset-bottom) + 20px);
 
+      display: flex;
+      flex-direction: column;
+
       color: #ffffff;
 
-      .header-title {
-        margin: 12px;
-      }
+      .stat-block {
+        //height: 100%;
+        flex: 1;
 
-      .stat {
-        margin: 48px 0;
+        position: relative;
 
         display: flex;
+        flex-direction: column;
         justify-content: center;
 
-        .item {
-          margin: 0 20px;
+        //text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.7);
 
-          .stat-num {
-            font-size: 46px;
-            line-height: 46px;
+        .header-title {
+          margin: 12px;
+        }
+
+        .stat {
+          display: flex;
+          justify-content: center;
+
+          .item {
+            margin: 0 20px;
+
+            .stat-num {
+              font-size: 46px;
+              line-height: 46px;
+            }
           }
+        }
+
+        .pattern {
+          width: 400px;
+          height: 400px;
+
+          position: absolute;
+          top: calc(50% - 200px);
+          left: calc(50% - 200px);
+
+          z-index: -1;
         }
       }
 
       .buttons {
         margin: 0 12px;
+
+        //margin-top: auto;
 
         display: flex;
         flex-direction: column;
@@ -106,12 +114,35 @@
             }
           }
         }
-      }
 
-      .Banner {
-        margin-top: 6px;
+        .Banner {
+          margin-top: 6px;
 
-        padding: 0 12px;
+          padding: 0;
+        }
+
+        .promo-banner {
+          width: auto !important;
+
+          margin-top: 6px;
+
+          outline: none !important;
+
+          border-radius: 15px;
+          background-color: #2b2b2b !important;
+
+          .PromoBanner__head {
+            padding: 5px 11px 0 11px;
+          }
+
+          .SimpleCell__children {
+            color: #e1e3e6 !important;
+          }
+
+          .SimpleCell__description {
+            color: #818c99 !important;
+          }
+        }
       }
     }
   }
@@ -125,29 +156,21 @@ body[scheme="space_gray"] {
   }
 }
 
-@media screen and (max-height: 660px) {
+@media screen and (max-width: 450px) {
   #main {
     .content {
-      .pattern-with-logo {
-        width: 220px;
-        height: 220px;
-
-        position: absolute;
-        top: var(--safe-area-inset-top);
-        left: calc(50% - 110px);
-
-        .logo {
-          width: 140px;
-          height: 150px;
-
-          top: calc(50% - 75px);
-          left: calc(50% - 70px);
-        }
-      }
-
       .buttons-with-stat {
-        .stat {
-          margin: 28px 0;
+        .stat-block {
+          .pattern {
+            width: 300px;
+            height: 300px;
+
+            position: absolute;
+            top: calc(50% - 150px);
+            left: calc(50% - 150px);
+
+            z-index: -1;
+          }
         }
       }
     }
