--- a/src/panels/Ranking/Ranking.scss
+++ b/src/panels/Ranking/Ranking.scss
@@ -46,6 +46,7 @@
   }
 
   .user-record {
+    border-top: 1px solid var(--separator_common);
     background-color: var(--background_content);
   }
 }
