--- a/src/panels/Main/Main.scss
+++ b/src/panels/Main/Main.scss
@@ -57,7 +57,7 @@
         flex-direction: column;
         justify-content: center;
 
-        //text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.7);
+        text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.7);
 
         .header-title {
           margin: 12px;
